--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.11.2",
+    "@clerk/themes": "^2.2.17",
     "@prisma/client": "^6.3.1",
     "concurrently": "^9.1.2",
     "mongodb": "^6.13.0",
