--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stripe/stripe-js": "^2.0.0",
     "concurrently": "^9.1.2",
     "contentful": "^11.4.6",
+    "lucide-react": "^0.475.0",
     "mongodb": "^6.13.0",
     "next": "15.1.6",
     "prisma": "^6.3.1",
