--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "ngrok": "ngrok http --url=composed-repeatedly-magpie.ngrok-free.app 3000",
-    "nextJs": "next dev --turbopack",
-    "dev": " concurrently \"npm run nextJs\" \"npm run ngrok\" "
+    "nextJs": "next dev --turbopack"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.11.2",
