--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "contentful": "^11.4.6",
     "lucide-react": "^0.475.0",
     "mongodb": "^6.13.0",
-    "next": "15.1.6",
+    "next": "14.1.0",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -39,8 +39,7 @@
     "json-server": "^1.0.0-beta.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "next": "15.1.6"
+    "typescript": "^5"
   },
   "description": "Create **NextCommerce**, a modern, authentication-protected platform using **Next.js 15**, **Clerk**, and **Contentful CMS**. Users can browse featured items publicly and access the full catalog upon authentication. This project will test your ability to work with **authentication, CMS integration, and protected routes** while ensuring a seamless and visually appealing user experience.",
   "main": "index.js",
