--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "json-server": "^1.0.0-beta.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
   "description": "Create **NextCommerce**, a modern, authentication-protected platform using **Next.js 15**, **Clerk**, and **Contentful CMS**. Users can browse featured items publicly and access the full catalog upon authentication. This project will test your ability to work with **authentication, CMS integration, and protected routes** while ensuring a seamless and visually appealing user experience.",
